--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   desktop_drop: ^0.4.1
   cross_file: ^0.3.3+4
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
